--- a/frontend/src/app/dashboard/dashboard.component.css
+++ b/frontend/src/app/dashboard/dashboard.component.css
@@ -239,4 +239,12 @@
   background-color: #c0392b !important;
 }
 
+.imagen-recorte {
+  width: 128px;
+  height: auto;
+  border: 1px solid #ccc;
+  margin-bottom: 8px;
+  border-radius: 8px;
+}
+
 
